fix [Windows]: A scrollbar is displayed for all options displayed in the nav menu #37, Feedback submission: thumb down issues #41, iOS: The page content is displayed under the opened menu while scrolling #43,

--- a/src/styles/breadcrumbs.scss
+++ b/src/styles/breadcrumbs.scss
@@ -103,8 +103,8 @@ $bc: #EDEDF0;
     right: auto;
     background: #FFF;
     z-index: 99;
-    max-height: 80vh;
-    overflow-y: scroll;
+    max-height: calc(80vh - 260px);
+    overflow-y: auto;
 
     + .step {
       &:after {
