--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -144,3 +144,7 @@ a {
     }
   }
 }
+
+.no-scroll {
+  overflow: hidden;
+}
